- install libSandy, add necessary files for libSandy (/layout/Library/libsandy/libSandyPrefs.plist) - move imports to a seperate header file - update tweak makefile for libSandy, add better files declaration (wildcard) - update preferences bundle makefile to allow for it to be built, was giving errors due to the target   being set so low. - add enable switch to the preferences bundle as well as modify other preferences bundle ui stuff,   change around the bundle id for the defaults

--- a/control
+++ b/control
@@ -6,4 +6,4 @@ Description: A tweak to modify the colors of the Messages app.
 Maintainer: Lucas Lowe
 Author: Lucas Lowe
 Section: Tweaks
-Depends: mobilesubstrate (>= 0.9.5000)
+Depends: mobilesubstrate (>= 0.9.5000), com.opa334.libsandy
