--- a/imsghuepreferences/Resources/Root.plist
+++ b/imsghuepreferences/Resources/Root.plist
@@ -8,7 +8,7 @@
 			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
-			<string>imsghuePreferences First Page</string>
+			<string>General</string>
 		</dict>
 		<dict>
 			<key>cell</key>
@@ -16,11 +16,11 @@
 			<key>default</key>
 			<true/>
 			<key>defaults</key>
-			<string>com.1vke.imsghuepreferences</string>
+			<string>com.1vke.imsghue</string>
 			<key>key</key>
-			<string>AwesomeSwitch1</string>
+			<string>isEnabled</string>
 			<key>label</key>
-			<string>Awesome Switch 1</string>
+			<string>Enabled</string>
 		</dict>
 	</array>
 	<key>title</key>
