--- a/Preferences/Resources/Root.plist
+++ b/Preferences/Resources/Root.plist
@@ -22,8 +22,26 @@
 			<key>label</key>
 			<string>Enabled</string>
 		</dict>
+        <dict>
+            <key>cell</key>
+            <string>PSLinkCell</string>
+            <key>cellClass</key>
+            <string>IMHColorPickerCell</string>
+            <key>fallback</key>
+            <string>530BC3</string>
+            <key>key</key>
+            <string>primaryColor</string>
+            <key>supportAlpha</key>
+            <false/>
+            <key>defaults</key>
+            <string>com.1vke.imsghue</string>
+            <key>PostNotification</key>
+            <string>com.1vke.imsghue.settingschanged</string>
+            <key>label</key>
+            <string>Message Bubble Color</string>
+        </dict>
 	</array>
 	<key>title</key>
-	<string>imsghuePreferences</string>
+	<string>imsghue</string>
 </dict>
 </plist>
